haproxy/echoserver-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: haproxy
  name: echoserver
  namespace: default
  resourceVersion: "88183"
spec:
  rules:
  - host: app.10.10.2.101.nip.io
    http:
      paths:
      - backend:
          service:
            name: echoserver
            port:
              number: 8080
        path: /
        pathType: ImplementationSpecific
      - backend:
          service:
            name: getting-started
            port:
              number: 80
        path: /getting-started
status:
  loadBalancer:
    ingress:
    - {}
